# docs/swagger.yaml
@@ -306,6 +306,153 @@ paths:
       summary: List all orders
       tags:
       - Orders
+  /api/v1/admin/products:
+    post:
+      consumes:
+      - multipart/form-data
+      description: Adds a new product to the inventory
+      parameters:
+      - description: Bearer token
+        in: header
+        name: Authorization
+        required: true
+        type: string
+      - description: Product Name
+        in: formData
+        name: name
+        required: true
+        type: string
+      - description: Product Description
+        in: formData
+        name: description
+        required: true
+        type: string
+      - description: Product Price
+        in: formData
+        name: price
+        required: true
+        type: number
+      - description: Stock Quantity
+        in: formData
+        name: stock
+        required: true
+        type: integer
+      - description: Requires Prescription
+        in: formData
+        name: requires_prescription
+        type: boolean
+      - description: Product Image
+        in: formData
+        name: image
+        required: true
+        type: file
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/proto.CreateProductResponse'
+      security:
+      - ApiKeyAuth: []
+      summary: Add a new product
+      tags:
+      - Products
+  /api/v1/admin/products/{id}:
+    delete:
+      consumes:
+      - application/json
+      description: Deletes a product by ID
+      parameters:
+      - description: Bearer token
+        in: header
+        name: Authorization
+        required: true
+        type: string
+      - description: Product ID
+        in: path
+        name: id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/proto.DeleteProductResponse'
+      security:
+      - ApiKeyAuth: []
+      summary: Delete a product
+      tags:
+      - Products
+    put:
+      consumes:
+      - application/json
+      description: Updates a product by ID
+      parameters:
+      - description: Bearer token
+        in: header
+        name: Authorization
+        required: true
+        type: string
+      - description: Product ID
+        in: path
+        name: id
+        required: true
+        type: string
+      - description: Product Details
+        in: body
+        name: request
+        required: true
+        schema:
+          $ref: '#/definitions/handlers.Product'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/proto.UpdateProductResponse'
+      security:
+      - ApiKeyAuth: []
+      summary: Update a product
+      tags:
+      - Products
+  /api/v1/admin/products/{id}/stock:
+    put:
+      consumes:
+      - application/json
+      description: Updates the stock of a product by ID
+      parameters:
+      - description: Bearer token
+        in: header
+        name: Authorization
+        required: true
+        type: string
+      - description: Product ID
+        in: path
+        name: id
+        required: true
+        type: string
+      - description: Stock Details
+        in: body
+        name: request
+        required: true
+        schema:
+          $ref: '#/definitions/handlers.StockRequest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/proto.UpdateStockResponse'
+      security:
+      - ApiKeyAuth: []
+      summary: Update stock
+      tags:
+      - Products
   /api/v1/login:
     post:
       consumes:
@@ -549,85 +696,7 @@ paths:
       summary: Get all products
       tags:
       - Products
-    post:
-      consumes:
-      - multipart/form-data
-      description: Adds a new product to the inventory
-      parameters:
-      - description: Bearer token
-        in: header
-        name: Authorization
-        required: true
-        type: string
-      - description: Product Name
-        in: formData
-        name: name
-        required: true
-        type: string
-      - description: Product Description
-        in: formData
-        name: description
-        required: true
-        type: string
-      - description: Product Price
-        in: formData
-        name: price
-        required: true
-        type: number
-      - description: Stock Quantity
-        in: formData
-        name: stock
-        required: true
-        type: integer
-      - description: Requires Prescription
-        in: formData
-        name: requires_prescription
-        type: boolean
-      - description: Product Image
-        in: formData
-        name: image
-        required: true
-        type: file
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            $ref: '#/definitions/proto.CreateProductResponse'
-      security:
-      - ApiKeyAuth: []
-      summary: Add a new product
-      tags:
-      - Products
   /api/v1/products/{id}:
-    delete:
-      consumes:
-      - application/json
-      description: Deletes a product by ID
-      parameters:
-      - description: Bearer token
-        in: header
-        name: Authorization
-        required: true
-        type: string
-      - description: Product ID
-        in: path
-        name: id
-        required: true
-        type: string
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            $ref: '#/definitions/proto.DeleteProductResponse'
-      security:
-      - ApiKeyAuth: []
-      summary: Delete a product
-      tags:
-      - Products
     get:
       consumes:
       - application/json
@@ -646,73 +715,6 @@ paths:
           schema:
             $ref: '#/definitions/proto.GetProductResponse'
       summary: Get a product
-      tags:
-      - Products
-    put:
-      consumes:
-      - application/json
-      description: Updates a product by ID
-      parameters:
-      - description: Bearer token
-        in: header
-        name: Authorization
-        required: true
-        type: string
-      - description: Product ID
-        in: path
-        name: id
-        required: true
-        type: string
-      - description: Product Details
-        in: body
-        name: request
-        required: true
-        schema:
-          $ref: '#/definitions/handlers.Product'
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            $ref: '#/definitions/proto.UpdateProductResponse'
-      security:
-      - ApiKeyAuth: []
-      summary: Update a product
-      tags:
-      - Products
-  /api/v1/products/{id}/stock:
-    put:
-      consumes:
-      - application/json
-      description: Updates the stock of a product by ID
-      parameters:
-      - description: Bearer token
-        in: header
-        name: Authorization
-        required: true
-        type: string
-      - description: Product ID
-        in: path
-        name: id
-        required: true
-        type: string
-      - description: Stock Details
-        in: body
-        name: request
-        required: true
-        schema:
-          $ref: '#/definitions/handlers.StockRequest'
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            $ref: '#/definitions/proto.UpdateStockResponse'
-      security:
-      - ApiKeyAuth: []
-      summary: Update stock
       tags:
       - Products
   /api/v1/register:
